--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=RestAPI_security
-spring.datasource.url=jdbc:mysql://localhost:3306/jv07_api_security?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/security_jv07?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
